# graph2obsidian

./: Makefile  pyproject.toml  requirements.txt
.github/workflows/: check.yml  ci.yml
src/graph2obsidian/: cli.py  converter.py  models.py  parser.py  server.py
test/fixtures/: demo.json
test/graph2obsidian/: test_converter.py  test_integration.py  test_server.py
