[build-system]
requires = ["setuptools==80.10.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "graph2obsidian"
version = "0.1.0"
description = "Convert graph databases to Obsidian vaults."
authors = [{ name = "jamesaorson", email = "jamesaorson@users.noreply.github.com" }]
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
# Configure setuptools to load dependencies from requirements.txt at build time
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://github.com/jamesaorson/graph2obsidian"
Issues = "https://github.com/jamesaorson/graph2obsidian/issues"

[project.scripts]
graph2obsidian = "graph2obsidian.cli:main"

[project.optional-dependencies]
mcp = ["mcp==1.28.1"]
build = [
  "build==1.4.0",
	"twine==6.2.0",
]
format = [
  "black==26.5.1",
	"isort==7.0.0",
]
lint = [
  "flake8==7.3.0",
	"Flake8-pyproject==1.2.4",
	"mypy==2.1.0",
]
test = ["pytest>=7.2"]

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "-ra -q -vv --tb=short"
testpaths = ["test"]

[tool.black]
line-length = 120
extend-exclude = '''
(
    .git
    __pycache__
    .mypy_cache/
    .pytest_cache/
    venv/
    build/
    dist/
)
'''

[tool.flake8]
max-line-length = 120
exclude = [
  ".git",
  "__pycache__",
  ".mypy_cache/",
  ".pytest_cache/",
  "venv/",
  "build/",
  "dist/",
]

[tool.isort]
profile = "black"
known_first_party = ["graph2obsidian", "test"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = """
(?x)
^(
  .git/ | __pycache__/ | .mypy_cache/ | .pytest_cache/ | venv/ | build/ | dist/
)$
"""
